using StringUtils.isBlank